<resources>
    <string name="app_name">Solidarinsa</string>
    <string name="connexion">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="hint_password">Tapez votre mot de passe</string>
    <string name="hint_mail">Entrez votre mail INSA</string>
    <string name="connection_button">Se connecter</string>
    <string name="not_a_member">Pas encore membre ?</string>
    <string name="register_text_clickable">Inscrivez-vous !</string>
    <string name="insa_mail">\@insa-lyon.fr</string>
    <string name="inscription_title">INSCRIPTION</string>
    <string name="firstname_text">Prénom</string>
    <string name="lastname_text">Nom</string>
    <string name="email_text">Email</string>
    <string name="hint_firstname">Entrez votre prénom</string>
    <string name="hint_familyname">Entrez votre nom</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_profile_profile">Profil</string>
    <string name="tab_profile_settings">Paramètres</string>

    <string name="points_text">Points</string>
    <string name="rating_text">Score</string>
    <string name="firstname_example">Martine</string>
    <string name="lastname_example">Martin</string>
    <string name="rating_example">4.5</string>
    <string name="points_example">5</string>
    <string name="my_objects_text">Mes objets</string>

    <string name="_10_pts">10 pts</string>
    <string name="pour_toi">Mes notifications</string>
    <string name="profile_image">profile_image</string>
    <string name="title_activity_loans_list">LoansListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="demande">Demande</string>
    <string name="accueil">Accueil</string>
    <string name="echanges">Echanges</string>
    <string name="emprents">Emprunts</string>
    <string name="prets">Prêts</string>
    <string name="Casserole">Casserole</string>
    <string name="validateimage">validateImage</string>
    <string name="cancelimage">cancelImage</string>
    <string name="Theo">Theo</string>
    <string name="pointStar">pointStar</string>
    <string name="_1">1</string>
    <string name="pierre">Pierre</string>
    <string name="_4">4</string>
    <string name="chaise">Chaise</string>
    <string name="passoire">Passoire</string>
    <string name="jean">Jean</string>
    <string name="pour_tous">Notifications générales</string>
    <string name="_3">3</string>
    <string name="matelas">Matelas</string>
    <string name="caroline">Caroline</string>
    <string name="appareil_raclette">Appareil raclette</string>
    <string name="sophie">Sophie</string>
    <string name="_2">2</string>
    <string name="exchanges">Mes echanges</string>
    <string name="faq">FAQ</string>
    <string name="chat">CHAT</string>
    <string name="addCommentExample">Écrivez ici tout ce que vous voulez dire sur l\'objet dont vous avez besoin</string>
    <string name="elementExample">Eco-cup</string>
    <string name="categoryExample">Cuisine</string>
    <string name="dateExample">01.01.2018</string>
    <string name="categoryMandatory">Catégorie</string>
    <string name="elementMandatory">Objet</string>
    <string name="startDateMandatory">À partir du</string>
    <string name="comment">Détails complémentaires</string>
    <string name="periodExample">Pendant</string>

    <string name="category">Choix de Catégories</string>
    <string name="category1">Cuisine</string>
    <string name="category2">Electroménager</string>
    <string name="category3">Informatique</string>
    <string name="category4">Sport</string>
    <string name="category5">Entretien</string>
    <string name="category6">Bricolage</string>
    <string name="category7">Livres</string>
    <string name="category8">Autre</string>
    <string name="cuisine">Choix objet dans la catégorie Cuisine</string>
    <string name="sport">Choix objet dans la catégorie Sport</string>
    <string name="sport1">Ballon de Foot</string>
    <string name="sport2">Ballon de Rugby</string>
    <string name="sport3">Ballon de Basket</string>
    <string name="sport4">Ballon de Hand</string>
    <string name="sport5">Raquette de Tennis</string>
    <string name="sport6">Autre</string>
    <string name="cuisine1">Casserole</string>
    <string name="cuisine2">Cocotte Minute</string>
    <string name="cuisine3">Poelle</string>
    <string name="cuisine4">Passoire</string>
    <string name="cuisine5">Moules</string>
    <string name="cuisine6">Autre</string>
    <string name="hint_repeat_password">Retapez votre mot de passe</string>
    <string name="repeat_password">Confirmation</string>
    <string name="question_object_to_lend">As-tu des objets à prêter ?</string>
    <string name="later">Plus tard</string>
    <string name="yes">Oui</string>

    <string name="categories_prompt">Choisissez une catégorie</string>
    <string name="faq_gagner_points">Pour gagner des points afin de pouvoir emprunter des objets aux autres Insaliens il suffit de prêter des choses à votre tour !  A chaque fois que vous prêtez un objet vous gagnez un point.  Une autre possibilité est de demander à un ami de vous prêter des points, à condition qu\'il lui en reste biensûr !</string>
    <string name="faq1_title">Comment gagner des points ?</string>
    <string name="faq2_title">Comment donner des points à un ami ?</string>
    <string name="faq2_answer">Pour donner des points à un ami qui est à sec c\'est très simple ! Rendez-vous sur votre profil, dans l\'onglet paramètres vous trouverez en bas de la fenêtre l\'option \"Donner des points\". Laissez-vous alors guider par les instructions affichées, validez et bingo !  Attention : il faut que votre ami possède une adresse email insa pour lui donner des points.</string>
    <string name="faq3_title">Comment ajouter un nouvel objet à prêter?</string>
    <string name="faq3_answer">Vous disposez d\'un objet que vous aimeriez prêter aux autres Insaliens ? Pour ajouter ce nouvel objet à votre compte, rendez-vous dans votre profil. En bas de votre profil, vous trouverez une liste de vos objets déjà enregistrés. Pour ajouter un nouvel objet, tapez sur le bouton editer et laissez-vous guider !</string>
    <string name="faq4_title">Comment faire pour noter quelqu\'un après un échange?</string>
    <string name="faq4_answer">Après l\'échange, seul le prêteur peut noter l\'autre. Pour cela il suffit de valider que l\'échange est bien terminé et vous serez automatiquement rediriger vers la page de notation. Soyez positif !</string>

    <string-array name="category_arrays">
        <item>Cuisine</item>
        <item>Entretien</item>
        <item>Sport</item>
        <item>Informatique</item>
        <item>Électroménager</item>
        <item>Vêtements</item>
        <item>Livres</item>
        <item>Divers</item>
    </string-array>

</resources>


