<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQActivity">

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRedInsa"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/person_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:onClick="launchProfile"
            app:srcCompat="@drawable/ic_person_24dp"/>

        <TextView
            android:id="@+id/chatTitle_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/faq"
            android:textColor="@android:color/white"
            android:textSize="@dimen/titleSize"/>

        <TextView
            android:id="@+id/points_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/_10_pts"
            android:textColor="@android:color/white"
            android:textSize="@dimen/pointSize"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorRedInsa"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_search_white_24dp"
            android:onClick="launchNewRequest"
            android:text="@string/demande"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_white_24dp"
            android:onClick="launchHomePage"
            android:text="@string/accueil"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_chat_white_24dp"
            android:onClick="launchExchanges"
            android:text="@string/echanges"
            android:textSize="12sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/faq1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="73dp">

                <LinearLayout
                    style="@style/FAQTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="expandFAQ1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/faq1_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faq1_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/faq_img_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        app:srcCompat="@drawable/ic_hide_white_24dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/faq_answer1"
                    style="@style/FAQAnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/faq_gagner_points"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/faq2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="73dp">

                <LinearLayout
                    style="@style/FAQTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="expandFAQ2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/faq2_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faq2_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/faq_img_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        app:srcCompat="@drawable/ic_hide_white_24dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/faq_answer2"
                    style="@style/FAQAnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/faq2_answer"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/faq3_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="73dp">

                <LinearLayout
                    style="@style/FAQTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="expandFAQ3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/faq3_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faq3_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/faq_img_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        app:srcCompat="@drawable/ic_hide_white_24dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/faq3_answer"
                    style="@style/FAQAnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/faq3_answer"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/faq4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="73dp">

                <LinearLayout
                    style="@style/FAQTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="expandFAQ4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/faq4_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faq4_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/faq_img_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        app:srcCompat="@drawable/ic_hide_white_24dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/faq4_answer"
                    style="@style/FAQAnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/faq4_answer"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>